Added order history page

--- a/client/src/components/Cart/CartLabel.module.scss
+++ b/client/src/components/Cart/CartLabel.module.scss
@@ -1,7 +1,7 @@
 .cartLabel {
   position: absolute;
   top: 30px;
-  right: 0;
+  right: 135px;
   background-color: transparent;
   border-color: #1ad1b9;
   color: #1ad1b9;
@@ -19,6 +19,6 @@
 .badge {
   background-color: #1ad1b9;
   border-radius: 30px;
-  padding: 0.15rem 1.25rem;
+  padding: 0.15rem 0.6rem;
   color: #1d1d1d;
 }
